--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "rub-map-lasso",
+  "version": "0.0.1",
   "homepage": "https://github.com/farooqsah/map-lasso",
   "authors": [
     "farooq"
@@ -16,6 +17,10 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
-  ]
+    "tests",
+    "bower.json"
+  ],
+  "dependencies": {
+    "jquery": ">=1.8.2"
+  }
 }
